--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "instagram-downloader",
   "version": "1.0.0",
   "description": "tool allowing to perform additional actions on instagram api",
-  "main": "app.js",
+  "main": "build/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,6 +22,16 @@
   "devDependencies": {
     "@types/jest": "^27.0.3",
     "@types/node": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "eslint": "^8.5.0",
+    "prettier": "^2.5.1",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "axios": "^0.24.0",
+    "chalk": "^4.1.2",
+    "commander": "^8.3.0",
+    "conf": "^10.1.1"
   }
 }
