--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tool allowing to perform additional actions on instagram api",
   "main": "build/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "bin": {
     "test-cli": "build/app.js"
@@ -28,13 +28,16 @@
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "eslint": "^8.5.0",
+    "jest": "^27.4.5",
     "prettier": "^2.5.1",
+    "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   },
   "dependencies": {
     "axios": "^0.24.0",
     "chalk": "^4.1.2",
     "commander": "^8.3.0",
-    "conf": "^10.1.1"
+    "conf": "^10.1.1",
+    "winston": "^3.3.3"
   }
 }
